--- a/compose.yaml
+++ b/compose.yaml
@@ -40,8 +40,35 @@ services:
     image: rabbitmq:3.11.3-management-alpine
     ports:
       - "15672:15672"
+    volumes:
+      - "./rabbitmq/enabled_plugins:/etc/rabbitmq/enabled_plugins"
   smtp:
     image: soulteary/maildev
     ports:
       - "1080:1080"
-
+  prometheus:
+    image: prom/prometheus
+    depends_on:
+      - backend
+      - quarkus
+      - rabbitmq
+    ports:
+      - "9090:9090"
+    volumes:
+      - prometheus-data:/prometheus
+      - ./profiling/prometheus.yml:/etc/prometheus/prometheus.yml
+  grafana:
+    image: grafana/grafana:latest
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
+      - GF_AUTH_ANONYMOUS_ENABLED=true
+      - GF_AUTH_BASIC_ENABLED=false
+      - GF_SERVER_SERVE_FROM_SUB_PATH=true
+    volumes:
+      - ./profiling/grafana-dashboard.yaml:/etc/grafana/provisioning/dashboards/dashboard.yaml
+      - ./profiling/grafana-datasource.yaml:/etc/grafana/provisioning/datasources/datasource.yaml
+      - ./profiling/dashboards/:/var/lib/grafana/dashboards
+volumes:
+    prometheus-data:
