--- a/nginx.conf
+++ b/nginx.conf
@@ -9,11 +9,11 @@ http {
    server_name localhost;
 
    location / {
-       proxy_pass http://front:80/;
+       proxy_pass http://front:80;
        proxy_set_header Host $host;
    }
-  location ~ ^/api/.* {
-    proxy_pass http://backend:3000/api;
+  location /api/ {
+    proxy_pass http://backend:3000/;
     proxy_set_header Host $host;
   }
  }
