--- a/nginx-monito.conf
+++ b/nginx-monito.conf
@@ -2,6 +2,10 @@ events {
   worker_connections  4096;  ## Default: 1024
 }
 http {
+ map $http_upgrade $connection_upgrade {
+   default upgrade;
+   '' close;
+ }
  server {
    listen 80;
    listen [::]:80;
@@ -19,6 +23,13 @@ http {
   location /mail/ {
       proxy_pass http://smtp:1080/;
       proxy_set_header Host $host;
+  }
+  location /monitoring/ {
+      proxy_pass http://grafana:3000/;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection $connection_upgrade;
+      proxy_set_header Host $http_host;
   }
  }
 }
